update: env example
